syntax = "proto3";
import "google/protobuf/empty.proto";
import "player.proto";

option java_multiple_files = true;
option java_package = "fr.agrouagrou.proto";

package proto;

// VoteVictim
message VoteVillagerVictimRequest {
  string playerId = 1;
  string targetId = 2;
}

service VillagerActions {
  rpc VoteVictim (VoteVillagerVictimRequest) returns (google.protobuf.Empty) {}
}
